// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentTimeline is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2 css-11owldj-euiAvatar-m-user"
  data-test-subj="test subject string"
  role="img"
  style="background-color:#c47c6c;color:#000000"
  title="someuser"
>
  <span
    aria-hidden="true"
  >
    s
  </span>
</div>
`;

exports[`EuiCommentTimeline props timelineIcon is rendered 1`] = `
<div
  aria-label="Mario"
  class="euiAvatar euiAvatar--l euiAvatar--user css-2h9g3u-euiAvatar-l-user"
  role="img"
  style="background-color:#f1d86f;color:#000000"
  title="Mario"
>
  <span
    aria-hidden="true"
  >
    M
  </span>
</div>
`;
